# kuberator

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE_MIT  MIGRATION_v0.3.md  README.md
examples/: basic_operator.rs  error_handling.rs  with_status.rs
src/: cache.rs  error.rs  k8s.rs  lib.rs
src/events/: mod.rs  recorder.rs  types.rs
