[package]
name = "kuberator"
version = "0.1.8"
edition = "2021"
authors = ["Mathias Oertel <mathias.oertel@gmail.com>"]
description = "Crate to simplify writing an k8s operator"
documentation = "https://docs.rs/kuberator"
readme = "README.md"
keywords = ["operator", "k8s", "kubernetes"]
license = "MIT"
repository = "https://github.com/commercetools/kuberator"

[dependencies]
kube = { version = "2.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.26", features = ["latest"] }

futures = { version = "0.3", default-features = false }
async-trait = "0.1"

schemars = "1.1"
serde = { version = "1.0", features = ["derive", "rc"] }

log = { version = "0.4", features = ["kv", "kv_serde"] }

thiserror = "2.0"
anyhow = "1.0"
